tests/cases/generics/errors/generic-explicit-mismatch.ari
fn identity[T](value: T) -> T {
  return value;
}

fn main() -> i64 {
  let value = identity<i64>(true);
  return value;
}
